[package]
name = "gasmoxian-client-rs"
version = "0.1.0"
edition = "2024"
description = "Gasmoxian OnlineCTR client — Rust port of the C++ Gasmoxian client for Crash Team Racing"
authors = ["7mochi"]
license = "Unlicense"

[dependencies]
rusty_enet = "0.4"
console = "0.16.3"
indicatif = "0.18.4"
dialoguer = "0.12.0"
anyhow = "1"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }